code/python/Vault/v2/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Vault client library for Python

[![PyPi](https://img.shields.io/pypi/v/fds.sdk.Vault)](https://pypi.org/project/fds.sdk.Vault/)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Allow clients to fetch Vault Analytics through APIs.

This Python package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 2
- Package version: 0.8.11
- Build package: org.openapitools.codegen.languages.PythonClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* Python >= 3.7

## Installation

### Poetry

```shell
poetry add fds.sdk.utils fds.sdk.Vault==0.8.11
```

### pip

```shell
pip install fds.sdk.utils fds.sdk.Vault==0.8.11
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Python environment.
   1. Install and activate python 3.7+. If you're using [pyenv](https://github.com/pyenv/pyenv):

      ```sh
      pyenv install 3.9.7
      pyenv shell 3.9.7
      ```

   2. (optional) [Install poetry](https://python-poetry.org/docs/#installation).
3. [Install dependencies](#installation).
4. Run the following:

```python
from fds.sdk.utils.authentication import ConfidentialClient

import fds.sdk.Vault
from fds.sdk.Vault.api import accounts_api
from fds.sdk.Vault.models import *
from dateutil.parser import parse as dateutil_parser
from pprint import pprint

# See configuration.py for a list of all supported configuration parameters.

# Examples for each supported authentication method are below,
# choose one that satisfies your use case.

# (Preferred) OAuth 2.0: FactSetOAuth2
# See https://github.com/FactSet/enterprise-sdk#oauth-20
# for information on how to create the app-config.json file
# See https://github.com/FactSet/enterprise-sdk-utils-python#authentication
# for more information on using the ConfidentialClient class
configuration = fds.sdk.Vault.Configuration(
    fds_oauth_client=ConfidentialClient('/path/to/app-config.json')
)

# Basic authentication: FactSetApiKey
# See https://github.com/FactSet/enterprise-sdk#api-key
# for information how to create an API key
# configuration = fds.sdk.Vault.Configuration(
#     username='USERNAME-SERIAL',
#     password='API-KEY'
# )

# Enter a context with an instance of the API client
with fds.sdk.Vault.ApiClient(configuration) as api_client:
    # Create an instance of the API class
    api_instance = accounts_api.AccountsApi(api_client)

    try:
        # Get accounts and sub-directories in a directory
        # example passing only required values which don't have defaults set
        api_response = api_instance.get_accounts()

        pprint(api_response)
    except fds.sdk.Vault.ApiException as e:
        print("Exception when calling AccountsApi->get_accounts: %s\n" % e)

    # # Get response, http status code and response headers
    # try:
    #     # Get accounts and sub-directories in a directory
    #     api_response, http_status_code, response_headers = api_instance.get_accounts_with_http_info()


    #     pprint(api_response)
    #     pprint(http_status_code)
    #     pprint(response_headers)
    # except fds.sdk.Vault.ApiException as e:
    #     print("Exception when calling AccountsApi->get_accounts: %s\n" % e)

    # # Get response asynchronous
    # try:
    #     # Get accounts and sub-directories in a directory
    #     async_result = api_instance.get_accounts_async()
    #     api_response = async_result.get()


    #     pprint(api_response)
    # except fds.sdk.Vault.ApiException as e:
    #     print("Exception when calling AccountsApi->get_accounts: %s\n" % e)

    # # Get response, http status code and response headers asynchronous
    # try:
    #     # Get accounts and sub-directories in a directory
    #     async_result = api_instance.get_accounts_with_http_info_async()
    #     api_response, http_status_code, response_headers = async_result.get()


    #     pprint(api_response)
    #     pprint(http_status_code)
    #     pprint(response_headers)
    # except fds.sdk.Vault.ApiException as e:
    #     print("Exception when calling AccountsApi->get_accounts: %s\n" % e)

```

### Using Pandas

To convert an API response to a Pandas DataFrame, it is necessary to transform it first to a dictionary.
```python
import pandas as pd

response_dict = api_response.to_dict()['data']

simple_json_response = pd.DataFrame(response_dict)
nested_json_response = pd.json_normalize(response_dict)
```

### Debugging

The SDK uses the standard library [`logging`](https://docs.python.org/3/library/logging.html#module-logging) module.

Setting `debug` to `True` on an instance of the `Configuration` class sets the log-level of related packages to `DEBUG`
and enables additional logging in Pythons [HTTP Client](https://docs.python.org/3/library/http.client.html).

**Note**: This prints out sensitive information (e.g. the full request and response). Use with care.

```python
import logging
import fds.sdk.Vault

logging.basicConfig(level=logging.DEBUG)

configuration = fds.sdk.Vault.Configuration(...)
configuration.debug = True
```

### Configure a Proxy

You can pass proxy settings to the Configuration class:

* `proxy`: The URL of the proxy to use.
* `proxy_headers`: a dictionary to pass additional headers to the proxy (e.g. `Proxy-Authorization`).

```python
import fds.sdk.Vault

configuration = fds.sdk.Vault.Configuration(
    # ...
    proxy="http://secret:password@localhost:5050",
    proxy_headers={
        "Custom-Proxy-Header": "Custom-Proxy-Header-Value"
    }
)
```

### Custom SSL Certificate

TLS/SSL certificate verification can be configured with the following Configuration parameters:

* `ssl_ca_cert`: a path to the certificate to use for verification in `PEM` format.
* `verify_ssl`: setting this to `False` disables the verification of certificates.
  Disabling the verification is not recommended, but it might be useful during
  local development or testing.

```python
import fds.sdk.Vault

configuration = fds.sdk.Vault.Configuration(
    # ...
    ssl_ca_cert='/path/to/ca.pem'
)
```


## Documentation for API Endpoints

All URIs are relative to *https://api-sandbox.factset.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*AccountsApi* | [**get_accounts**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Vault/v2/docs/AccountsApi.md#get_accounts) | **GET** /analytics/lookups/v2/accounts/{path} | Get accounts and sub-directories in a directory
*CalculationsApi* | [**cancel_calculation_by_id**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Vault/v2/docs/CalculationsApi.md#cancel_calculation_by_id) | **DELETE** /analytics/engines/v2/calculations/{id} | Cancel calculation by id
*CalculationsApi* | [**get_calculation_status_by_id**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Vault/v2/docs/CalculationsApi.md#get_calculation_status_by_id) | **GET** /analytics/engines/v2/calculations/{id} | Get calculation status by id
*CalculationsApi* | [**get_calculation_status_summaries**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Vault/v2/docs/CalculationsApi.md#get_calculation_status_summaries) | **GET** /analytics/engines/v2/calculations | Get all calculation statuses
*CalculationsApi* | [**run_calculation**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Vault/v2/docs/CalculationsApi.md#run_calculation) | **POST** /analytics/engines/v2/calculations | Run calculation
*ComponentsApi* | [**get_vault_component_by_id**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Vault/v2/docs/ComponentsApi.md#get_vault_component_by_id) | **GET** /analytics/lookups/v2/engines/vault/components/{id} | Get Vault component by id
*ComponentsApi* | [**get_vault_components**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Vault/v2/docs/ComponentsApi.md#get_vault_components) | **GET** /analytics/lookups/v2/engines/vault/components | Get Vault components
*ConfigurationsApi* | [**get_vault_configuration_by_id**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Vault/v2/docs/ConfigurationsApi.md#get_vault_configuration_by_id) | **GET** /analytics/lookups/v2/engines/vault/configurations/{id} | Get Vault configuration by id
*ConfigurationsApi* | [**get_vault_configurations**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Vault/v2/docs/ConfigurationsApi.md#get_vault_configurations) | **GET** /analytics/lookups/v2/engines/vault/configurations | Get Vault configurations
*DatesApi* | [**convert_vault_dates_to_absolute_format**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Vault/v2/docs/DatesApi.md#convert_vault_dates_to_absolute_format) | **GET** /analytics/lookups/v2/engines/vault/dates | Convert Vault dates to absolute format
*DocumentsApi* | [**get_vault_documents**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Vault/v2/docs/DocumentsApi.md#get_vault_documents) | **GET** /analytics/lookups/v2/engines/vault/documents/{path} | Get Vault documents and sub-directories in a directory
*FrequenciesApi* | [**get_vault_frequencies**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Vault/v2/docs/FrequenciesApi.md#get_vault_frequencies) | **GET** /analytics/lookups/v2/engines/vault/frequencies | Get Vault frequencies


## Documentation For Models

 - [AccountDirectories](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Vault/v2/docs/AccountDirectories.md)
 - [Calculation](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Vault/v2/docs/Calculation.md)
 - [CalculationStatus](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Vault/v2/docs/CalculationStatus.md)
 - [CalculationStatusSummary](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Vault/v2/docs/CalculationStatusSummary.md)
 - [CalculationUnitStatus](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Vault/v2/docs/CalculationUnitStatus.md)
 - [ComponentAccount](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Vault/v2/docs/ComponentAccount.md)
 - [ComponentBenchmark](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Vault/v2/docs/ComponentBenchmark.md)
 - [ComponentSummary](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Vault/v2/docs/ComponentSummary.md)
 - [ConfigurationAccount](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Vault/v2/docs/ConfigurationAccount.md)
 - [DateParametersSummary](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Vault/v2/docs/DateParametersSummary.md)
 - [DocumentDirectories](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Vault/v2/docs/DocumentDirectories.md)
 - [Frequency](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Vault/v2/docs/Frequency.md)
 - [PACalculationColumn](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Vault/v2/docs/PACalculationColumn.md)
 - [PACalculationGroup](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Vault/v2/docs/PACalculationGroup.md)
 - [PACalculationParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Vault/v2/docs/PACalculationParameters.md)
 - [PADateParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Vault/v2/docs/PADateParameters.md)
 - [PAIdentifier](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Vault/v2/docs/PAIdentifier.md)
 - [PubCalculationParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Vault/v2/docs/PubCalculationParameters.md)
 - [PubDateParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Vault/v2/docs/PubDateParameters.md)
 - [PubIdentifier](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Vault/v2/docs/PubIdentifier.md)
 - [SPARCalculationParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Vault/v2/docs/SPARCalculationParameters.md)
 - [SPARDateParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Vault/v2/docs/SPARDateParameters.md)
 - [SPARIdentifier](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Vault/v2/docs/SPARIdentifier.md)
 - [VaultCalculationParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Vault/v2/docs/VaultCalculationParameters.md)
 - [VaultComponent](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Vault/v2/docs/VaultComponent.md)
 - [VaultConfiguration](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Vault/v2/docs/VaultConfiguration.md)
 - [VaultConfigurationSummary](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Vault/v2/docs/VaultConfigurationSummary.md)
 - [VaultDateParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Vault/v2/docs/VaultDateParameters.md)
 - [VaultIdentifier](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Vault/v2/docs/VaultIdentifier.md)


## Documentation For Authorization


## FactSetApiKey

- **Type**: HTTP basic authentication


## FactSetOAuth2

- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Notes for Large OpenAPI documents
If the OpenAPI document is large, imports in fds.sdk.Vault.apis and fds.sdk.Vault.models may fail with a
RecursionError indicating the maximum recursion limit has been exceeded. In that case, there are a couple of solutions:

Solution 1:
Use specific imports for apis and models like:
- `from fds.sdk.Vault.api.default_api import DefaultApi`
- `from fds.sdk.Vault.model.pet import Pet`

Solution 2:
Before importing the package, adjust the maximum recursion limit as shown below:
```
import sys
sys.setrecursionlimit(1500)
import fds.sdk.Vault
from fds.sdk.Vault.apis import *
from fds.sdk.Vault.models import *
```

## Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

## Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.

